[package]
name = "slider_captcha_server"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.23.14"
rand = "0.8.4"

[dev-dependencies]
actix-web = "4.0"
actix-cors = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
base64 = "0.13.0"
mysql = "20.0.2"

[[example]]
name = "actix"
